--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,8 @@
 # 线上环境
 ENV = 'production'
 
+# public path 配置线上环境路径（打包）
+VITE_PUBLIC_PATH = '/'
+
 # 线上环境接口地址
-VITE_API_URL = 'http://localhost:8000/'
+VITE_API_URL = 'https://admin.zhontai.net'
