--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint-fix": "eslint --fix --ext .js --ext .jsx --ext .vue src/",
     "format": "npx prettier --write .",
     "install:pkg": "npm install --registry https://registry.npmmirror.com",
-    "gen:admin-api": "node ./gen/gen-admin-api"
+    "gen:admin-api": "node ./gen/gen-api"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
@@ -22,7 +22,7 @@
     "echarts": "^5.4.1",
     "echarts-gl": "^2.0.9",
     "echarts-wordcloud": "^2.1.0",
-    "element-plus": "^2.2.33",
+    "element-plus": "^2.2.35",
     "js-cookie": "^3.0.1",
     "js-table2excel": "^1.0.3",
     "jsplumb": "^2.15.6",
@@ -49,17 +49,17 @@
     "@typescript-eslint/parser": "^5.54.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/compiler-sfc": "^3.2.47",
+    "dotenv": "16.0.3",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "prettier": "^2.8.4",
     "sass": "^1.58.3",
+    "swagger-typescript-api": "12.0.3",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vite-plugin-vue-setup-extend-plus": "^0.1.0",
     "vue-eslint-parser": "^9.1.0",
-    "dotenv": "16.0.3",
-    "vite-plugin-compression": "0.5.1",
-    "swagger-typescript-api": "12.0.3"
+    "vite-plugin-compression": "0.5.1"
   },
   "browserslist": [
     "> 1%",
