--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "splitpanes": "^3.1.5",
     "vue": "^3.2.47",
     "vue-clipboard3": "^2.0.0",
+    "vue-demi": "^0.14.0",
     "vue-grid-layout": "^3.0.0-beta1",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6"
