--- a/.github/workflows/test-deploy.yml
+++ b/.github/workflows/test-deploy.yml
@@ -25,11 +25,9 @@ jobs:
           cache: "npm"
       # 执行打包命令
       - run: |
-          if [ -z "${{ secrets.API_HOST }}" ]; then
+          if [ -n "${{ secrets.API_HOST }}" ]; then
             # 使用设置中的接口地址
             echo VITE_API_URL=${{ secrets.API_HOST }} >> .env.production
-          else
-            echo "use zhontai.net"
           fi
       - run: node -v && npm -v && npm install && npm run build
       # 将dist复制到docker目录中
