--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "vue3 vite admin plus",
   "author": "",
   "license": "MIT",
+  "type": "module",
   "scripts": {
     "dev": "vite --force",
     "build": "vite build",
@@ -39,26 +40,25 @@
     "vue-clipboard3": "^2.0.0",
     "vue-demi": "^0.14.6",
     "vue-grid-layout": "^3.0.0-beta1",
-    "vue-i18n": "^9.7.0",
+    "vue-i18n": "^9.7.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20.9.1",
+    "@types/node": "^20.9.4",
     "@types/nprogress": "^0.2.3",
-    "@types/sortablejs": "^1.15.5",
-    "@typescript-eslint/eslint-plugin": "^6.11.0",
-    "@typescript-eslint/parser": "^6.11.0",
+    "@types/sortablejs": "^1.15.7",
+    "@typescript-eslint/eslint-plugin": "^6.12.0",
+    "@typescript-eslint/parser": "^6.12.0",
     "@vitejs/plugin-vue": "^4.5.0",
     "@vue/compiler-sfc": "^3.3.8",
     "dotenv": "16.3.1",
-    "eslint": "^8.53.0",
+    "eslint": "^8.54.0",
     "eslint-plugin-vue": "^9.18.1",
     "prettier": "^3.1.0",
     "sass": "^1.69.5",
     "swagger-typescript-api": "13.0.3",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "vite-plugin-vue-setup-extend-plus": "^0.1.0",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
     "vue-eslint-parser": "^9.3.2",
     "vite-plugin-compression": "0.5.1"
   },
