--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,5 +70,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["src/**/*.ts", "src/**/*.vue", "src/**/*.tsx", "src/**/*.d.ts", "vite.config.ts"], // **Represents any directory, and * represents any file. Indicates that all files in the src directory will be compiled
-  "exclude": ["node_modules", "dist"] // Indicates the file directory that does not need to be compiled
+  "exclude": ["node_modules", "dist", "bin", "gen"] // Indicates the file directory that does not need to be compiled
 }
