--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "typescript": "^5.3.2",
     "vite": "^5.0.5",
     "vue-eslint-parser": "^9.3.2",
-    "vite-plugin-compression": "0.5.1"
+    "vite-plugin-compression": "0.5.1",
+    "vite-plugin-vue-setup-extend-plus": "^0.1.0"
   },
   "browserslist": [
     "> 1%",
